syntax = "proto3";


package spot;


service SpotService {
    rpc AddOrder (AddOrderRequest) returns (AddOrderResponse);
    rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse);
}

message ProtoTrade {
    uint64 id = 1;
    double timestamp = 2; // Unix timestamp
    string market = 3;
    string base_asset = 4;
    string quote_asset = 5;
    string price = 6;
    string amount = 7;
    string quote_amount = 8;

    uint32 ask_user_id = 9;
    uint64 ask_order_id = 10;
    string ask_role = 11; // Maker/Taker
    string ask_fee = 12;

    uint32 bid_user_id = 13;
    uint64 bid_order_id = 14;
    string bid_role = 15;
    string bid_fee = 16;
}
message AddOrderResponse {
repeated ProtoTrade trades = 1;
}
message AddOrderRequest {
  uint64 id = 1;
  string base_asset = 2;
  string quote_asset = 3;
  string market = 4;
  string order_type = 5;//LIMIT or MARKET
  string side = 6;//BUY or SELL
  uint32 user_id = 7;
  bool post_only = 8;
  string price = 9;
  string amount = 10;
  string maker_fee = 11;
  string taker_fee = 12;
}


message CancelOrderRequest {
    uint64 order_id = 1;
}

message CancelOrderResponse {
    bool success = 1;
}
